<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context="com.igorkh.trustcheck.securitycheck.RegisterActivity">

    <TextView
        android:id="@+id/details"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/register_details"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/firstName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/firstname_tb"
        android:inputType="textPersonName"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/lname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/firstName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/lastname_tb"
        android:inputType="textPersonName"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/userName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/lname"
        android:layout_below="@+id/lname"
        android:layout_marginTop="10dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_username"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/pwdInfo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Password has to be 8 characters at least"
        android:textAlignment="center"
        android:textSize="11sp" />
    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/pwdInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password_tb"
        android:inputType="textPassword"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/cnfmPwd_tb"
        android:inputType="textPassword"
        android:textSize="16sp" />
    <CheckBox
        android:id="@+id/usrImeiPmn"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@+id/confirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/imei_permission" />
    <Button
        android:id="@+id/registerUser"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/usrImeiPmn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/save_but" />
</RelativeLayout>
