<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context="com.igorkh.trustcheck.securitycheck.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        app:srcCompat="@drawable/androidlogo" />
    <ProgressBar
        android:id="@+id/loadLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:visibility="gone" />
        <EditText
            android:id="@+id/userName"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/password"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="50dp"
            android:background="#11000000"
            android:drawableStart="@drawable/ic_action_username"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/userName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="#11000000"
            android:drawableStart="@drawable/ic_action_password"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="16sp" />
        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/login_but" />
        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/register_but" />
    </RelativeLayout>
