<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
    <LinearLayout
        android:visibility="visible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/score"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/sys_par"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ScrollView
            android:visibility="visible"
            android:id="@+id/mainScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_top"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/score_weight"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/scr_score"
                        android:text="0"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/chk_weight"
                        android:layout_height="wrap_content"
                        android:id="@+id/chk_scr"
                        android:text="@string/scr_lock_sim"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin_top"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/score_weight"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/os_score"
                        android:text="0"/>
                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/chk_weight"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/rb_last"
                            android:text="@string/os_ver_sim_last"
                            android:checked="true"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/rb_prev"
                            android:text="@string/os_ver_sim_prev"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/rb_old"
                            android:text="@string/os_ver_sim_old"/>
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_top"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/score_weight"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/unkn_score"
                        android:text="0"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/chk_weight"
                        android:layout_height="wrap_content"
                        android:id="@+id/chk_unkn"
                        android:text="@string/unknwn_sim"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_top"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/score_weight"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/pta_score"
                        android:text="0"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/chk_weight"
                        android:layout_height="wrap_content"
                        android:id="@+id/chk_pta"
                        android:text="@string/pta_sim"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_top"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/score_weight"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/dev_score"
                        android:text="0"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/chk_weight"
                        android:layout_height="wrap_content"
                        android:id="@+id/chk_dev"
                        android:text="@string/dev_meu"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_top"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/score_weight"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/bit_score"
                        android:text="0"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/chk_weight"
                        android:layout_height="wrap_content"
                        android:id="@+id/chk_bit"
                        android:text="@string/basic_integrity_sim"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_top"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/score_weight"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/act_score"
                        android:text="0"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="@dimen/chk_weight"
                        android:layout_height="wrap_content"
                        android:id="@+id/chk_act"
                        android:text="@string/andr_compatibility_sim"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_margin="@dimen/margin_top">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_hor"
                        android:text="@string/score1"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_green_dark"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_hor"
                        android:text=" 0 "
                        android:id="@+id/compl_score"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_green_dark"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_hor"
                        android:text="@string/score2"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_green_dark"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_hor"
                        android:text=" 0"
                        android:id="@+id/max_score"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_green_dark"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal">
            <Button
                android:id="@+id/but_clear"
                android:text="@string/clear_but"
                android:visibility="gone"
                android:enabled="true"
                android:layout_marginHorizontal="@dimen/margin_hor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
