<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.igorkh.trustcheck.securitycheck.HistoryActivity">

   <com.jjoe64.graphview.GraphView
       android:id="@+id/graph"
       android:layout_width="350dp"
       android:layout_height="400dp"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
       android:paddingBottom="10dp"
       android:paddingLeft="10dp"
       android:paddingRight="10dp" />
   <RadioGroup
       android:id="@+id/scale"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp"
       android:layout_marginTop="7dp"
       android:gravity="center|bottom"
       android:orientation="horizontal">
      <RadioButton
          android:id="@+id/hourSelection"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="40dp"
          android:text="@string/hour_radio"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="15sp" />
      <RadioButton
          android:id="@+id/dateSelection"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:checked="true"
          android:text="@string/date_radio"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="15sp" />
      <RadioButton
          android:id="@+id/monthSelection"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/month_radio"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="15sp" />
   </RadioGroup>
</RelativeLayout>